--- a/assets/style.css
+++ b/assets/style.css
@@ -16,7 +16,7 @@ body,
 html,
 #map {
   width: 100%;
-  height: 100%;
+  height: 600px;
 }
 
 body {
@@ -96,9 +96,9 @@ svg:not(:root) {
 }
 
 .sidebar .close-button svg {
-  fill: #fff;
-  width: 30px;
-  height: 30px;
+  fill: red;
+  width: 40px;
+  height: 40px;
 }
 
 .sidebar svg {
@@ -179,11 +179,11 @@ svg:not(:root) {
   align-items: center;
   line-height: 1;
   color: #fff;
-  font-size: 8px;
-  box-shadow: 0px 0px 10px #ff0000;
+  font-size: 12px;
+  box-shadow: 0px 0px 10px white;
   border-radius: 100%;
   border: 2px solid #fff;
-  background: #ff3939;
+  background: black;
 }
 
 .active-sidebar .leaflet-marker-icon,
@@ -209,16 +209,63 @@ svg:not(:root) {
 
 
 #myProgress {
-  width: 100%;
-  background-color: #ddd;
-  margin:24px
+  margin: 24px
 }
 
-#myBar {
-  width: 10%;
-  height: 30px;
-  background-color: red;
+.progress-bar{
+  margin-bottom: 24px;
+  height: 48px !important;
+  line-height: 48px !important;
+  
+}
+
+
+
+
+
+/*Legend specific*/
+.legend {
+  padding: 6px 8px;
+  font: 14px Arial, Helvetica, sans-serif;
+  background: white;
+  background: rgba(255, 255, 255, 0.8);
+  /*box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);*/
+  /*border-radius: 5px;*/
+  line-height: 24px;
+  color: #555;
+}
+.legend h4 {
   text-align: center;
-  line-height: 30px;
-  color: white;
+  font-size: 16px;
+  margin: 2px 12px 8px;
+  color: #777;
+}
+
+.legend span {
+  position: relative;
+  bottom: 3px;
+}
+
+.legend i {
+  width: 18px;
+  height: 18px;
+  float: left;
+  margin: 0 8px 0 0;
+  opacity: 0.7;
+}
+
+.legend i.icon {
+  background-size: 18px;
+  background-color: rgba(255, 255, 255, 1);
+}
+
+
+hr.new5 {
+  border: 2px solid green;
+  width: 25px;
+}
+
+hr.new4 {
+  border: 2px solid black;
+  width: 25px;
 }
