--- a/assets/style.css
+++ b/assets/style.css
@@ -36,144 +36,18 @@ svg:not(:root) {
   display: none;
 }
 
-.active-sidebar .leaflet-left {
-  transform: translateX(490px);
-}
-
-.sidebar {
-  display: block;
-  position: absolute;
-  width: 100%;
-  max-width: 480px;
-  z-index: 99999;
-  background: #fff;
-  overflow: hidden;
-  height: 100%;
-  transform: translateX(calc(-100% - 20px));
-  box-shadow: 0px 0px 22px -11px rgba(66, 68, 90, 1);
-}
-
-.active-sidebar .sidebar {
-  max-width: 560px;
-  width: 100%;
-  transform: translateX(0);
-}
-
-@media (min-width: 768px) {
-  .sidebar {
-    top: 10px;
-    left: 10px;
-    border-radius: 5px;
-    height: calc(100% - 20px);
-    transition: transform 0.3s ease-in-out;
-  }
-
-  .active-sidebar .sidebar {
-    max-width: 480px;
-    width: 100%;
-    transform: translateX(0);
-    transition: transform 0.3s ease-in-out;
-  }
-
-  .active-sidebar .leaflet-left {
-    transform: translateX(485px);
-    transition: transform 350ms;
-  }
-}
-
-.close-button {
-  cursor: pointer;
-  position: absolute;
-  top: 10px;
-  right: 5px;
-  border: none;
-  padding: 5px;
-  margin: 0;
-  padding: 0;
-  border-radius: 3px;
-  z-index: 1;
-  background: none;
-}
-
-.sidebar .close-button svg {
-  fill: red;
-  width: 40px;
-  height: 40px;
-}
-
-.sidebar svg {
-  display: block;
-  width: 20px;
-  height: 20px;
-  fill: #3f3f3f;
-  pointer-events: none;
-}
-
-.sidebar-menu {
-  display: flex;
-  flex-direction: column;
-  list-style: none;
-  height: 100%;
-}
-
-/* sidebar-content */
-.sidebar-content {
-  height: inherit;
-}
-
-.sidebar-content h1 {
-  position: sticky;
-  top: 0;
-  color: #fff;
-  background: #0052b1;
-  padding: 10px 35px 10px 15px;
-}
-
-.sidebar-content img {
-  display: block;
-  max-width: 100%;
-  height: auto;
-}
-
-.sidebar-content small {
-  display: block;
-  padding: 5px 15px;
-}
-
-.info-description {
-  padding: 5px 15px 15px;
-  line-height: 150%;
-}
-
-.info-content {
-  height: 100%;
-  overflow: auto;
-  padding-bottom: 50px;
-}
-
-.marker-id {
-  font-size: 3rem;
-  font-weight: bold;
-  position: absolute;
-  left: 10px;
-  color: rgba(255, 255, 255, 0.5);
-}
-
-.info-content::-webkit-scrollbar {
-  width: 10px;
-}
-
-.info-content::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 6px rgba(0, 81, 255, 0.3);
-}
-
-.info-content::-webkit-scrollbar-thumb {
-  background-color: #003764;
-  outline: 1px solid #002449;
-}
 
 /* marker */
 .leaflet-marker-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  line-height: 1;
+  color: #fff;
+  font-size: 12px;
+
+}
+.poi-icon {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -184,6 +58,18 @@ svg:not(:root) {
   border-radius: 100%;
   border: 2px solid #fff;
   background: black;
+}
+.waypoint-icon{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  line-height: 1;
+  color: #fff;
+  font-size: 12px;
+  box-shadow: 0px 0px 10px white;
+  border-radius: 100%;
+  border: 2px solid #fff;
+  background: grey;
 }
 
 .active-sidebar .leaflet-marker-icon,
@@ -212,11 +98,11 @@ svg:not(:root) {
   margin: 24px
 }
 
-.progress-bar{
+.progress-bar {
   margin-bottom: 24px;
   height: 48px !important;
   line-height: 48px !important;
-  
+
 }
 
 
@@ -234,6 +120,7 @@ svg:not(:root) {
   line-height: 24px;
   color: #555;
 }
+
 .legend h4 {
   text-align: center;
   font-size: 16px;
@@ -268,4 +155,183 @@ hr.new5 {
 hr.new4 {
   border: 2px solid black;
   width: 25px;
+}
+
+
+
+
+*,
+:after,
+:before {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+html {
+  height: 100%;
+}
+
+body,
+html,
+#map {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  height: 100%;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial,
+    sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+  min-height: 100%;
+  padding: 0;
+  margin: 0;
+  background-color: #fff;
+}
+
+img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.flex {
+  display: flex;
+}
+
+.flex-direction-column {
+  flex-direction: column;
+}
+
+.small {
+  display: inline-block;
+}
+
+.small+.small {
+  border-left: 1px solid #2094f3;
+  margin-left: 10px;
+  padding-left: 10px;
+}
+
+.arrow::before {
+  content: "→";
+  position: absolute;
+  left: 0;
+}
+
+.arrow {
+  position: relative;
+  padding-left: 19px;
+  margin-top: 5px;
+}
+
+.small:first-child a {
+  display: flex;
+}
+
+.small a {
+  text-decoration: none;
+  color: #2094f3;
+}
+
+.code-place-js,
+.code-place-css {
+  font-size: 1rem;
+  margin: 10px auto 50px;
+}
+
+.hidden {
+  display: none !important;
+}
+
+.show-code-full-screen {
+  overflow: hidden;
+}
+
+.show-code-full-screen iframe {
+  position: fixed;
+  display: flex;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  margin: 0;
+  height: 100%;
+  z-index: 1;
+  border: 0;
+}
+
+.open-source {
+  flex-wrap: wrap;
+  gap: 10px;
+  margin-bottom: 20px;
+}
+
+.open-source a:hover,
+.open-source a.show-code {
+  background-color: #000;
+  color: #fff;
+}
+
+.open-source a {
+  border: 1px solid #3c3c3c;
+  padding: 5px 15px;
+  text-decoration: none;
+  border-radius: 50px;
+  text-transform: uppercase;
+  color: #000;
+  transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2);
+}
+
+.hide-iframe {
+  position: absolute;
+  display: none;
+  top: var(--pos-top);
+  left: var(--pos-left);
+  right: var(--pos-right);
+  bottom: var(--pos-bottom);
+  z-index: 2;
+  width: 40px;
+  height: 40px;
+  border: 0;
+  font-size: 1.5rem;
+  cursor: pointer;
+  background: #ff4800;
+  text-transform: uppercase;
+  color: #fff;
+  opacity: 0.7;
+  line-height: 1;
+  border-radius: 4px;
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2);
+  transition: opacity 0.5s ease-in-out;
+}
+
+.hide-iframe:hover {
+  opacity: 1;
+}
+
+.show-code-full-screen .hide-iframe {
+  display: block;
+}
+
+.file-container {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  color: #2094f3;
+}
+
+.icon-file {
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  stroke-width: 0;
+  stroke: currentColor;
+  fill: currentColor;
 }
