--- a/assets/style.css
+++ b/assets/style.css
@@ -57,7 +57,7 @@ svg:not(:root) {
   box-shadow: 0px 0px 10px white;
   border-radius: 100%;
   border: 2px solid #fff;
-  background: black;
+  background: red;
 }
 .waypoint-icon{
   display: flex;
